update 5 questions